2002-12-27  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>

	* FLIM: Version 1.14.5 (Demachiyanagi) released.

2002-11-15  Katsumi Yamaoka  <yamaoka@jpl.org>

	* smtp.el (smtp-send-buffer): Error if `smtp-server' is nil.

2002-11-15  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* FLIM-ELS (flim-version-specific-modules): Don't install mailcap.el.
	* FLIM-MK (install-flim): Avoid creating empty directory.

2002-11-06  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>

	* mime-parse.el (mime-parse-buffer): Require mmbuffer.

2002-10-28  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* mime-def.el (toplevel): Bind colon keywords to suppress
	byte-compile warnings.

2002-09-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* luna.el (luna-make-clear-method-cache-function): Redefine it as
	a compiler macro.

2002-09-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* luna.el (luna-make-clear-method-cache-function): New function.
	(luna-define-method): Use it.

2002-09-26  TSUCHIYA Masatoshi  <tsuchiya@namazu.org>

	* luna.el (luna-define-method): Clear method cache of child
	classes.

	* mime-ja.texi (CVS): Escape @.

2002-09-14  KOSEKI Yoshinori  <kose@meadowy.org>

	* mime-en.texi (CVS): Fix Typo. (@ to @@).
	mime-ja.texi (CVS): Ditto.

2002-08-26  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* std11.el: Update Copyright header.

2002-07-30  MORIOKA Tomohiko  <tomo@mousai.as.wakwak.ne.jp>

	* std11.el (std11-non-atom-regexp): New constant.
	(std11-analyze-atom): New implementation to avoid error in current
	XEmacs UTF-2000 [may be caused by a bug about regexp].

2002-07-26  Katsumi Yamaoka   <yamaoka@jpl.org>

	* smtp.el (smtp-open-connection-function): Add doc.
	(smtp-end-of-line): Doc fix.

2002-07-24  Katsumi Yamaoka   <yamaoka@jpl.org>

	* smtp.el (smtp-end-of-line): New variable.
	(smtp-read-response): Use it.
	(smtp-send-command): Use it.
	(smtp-send-data): Use it.


2002-06-03  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>
