@@ -651,25 +651,26 @@ encoded-word.  ASCII token is not encoded."
 ;;;###autoload
 (defun mime-encode-header-in-buffer (&optional code-conversion)
   "Encode header fields to network representation, such as MIME encoded-word.
-
-It refer variable `mime-field-encoding-method-alist'."
+It refers the variable `mime-field-encoding-method-alist'."
   (interactive "*")
   (save-excursion
     (save-restriction
       (std11-narrow-to-header mail-header-separator)
       (goto-char (point-min))
       (let ((default-cs (mime-charset-to-coding-system default-mime-charset))
+	    (regexp (concat "\\(" std11-field-head-regexp "\\)" " ?"))
 	    bbeg end field-name)
-	(while (re-search-forward std11-field-head-regexp nil t)
+	(while (re-search-forward regexp nil t)
 	  (setq bbeg (match-end 0)
-		field-name (buffer-substring (match-beginning 0) (1- bbeg))
+		field-name (buffer-substring (match-beginning 0)
+					     (1- (match-end 1)))
 		end (std11-field-end))
 	  (and (delq 'ascii (find-charset-region bbeg end))
 	       (let ((method (eword-find-field-encoding-method
 			      (downcase field-name))))
 		 (cond ((eq method 'mime)
 			(let* ((field-body
-			       (buffer-substring-no-properties bbeg end))
+				(buffer-substring-no-properties bbeg end))
 			       (encoded-body
 				(mime-encode-field-body
 				 field-body field-name)))
@@ -683,11 +684,8 @@ It refer variable `mime-field-encoding-method-alist'."
 			       (or (mime-charset-to-coding-system
 				    method)
 				   default-cs)))
-			  (encode-coding-region bbeg end cs)
-			  )))
-		 ))
-	  ))
-      )))
+			  (encode-coding-region bbeg end cs)))))))))))
+
 (defalias 'eword-encode-header 'mime-encode-header-in-buffer)
 (make-obsolete 'eword-encode-header 'mime-encode-header-in-buffer)
 
