@@ -1,4 +1,10 @@
-2002-12-27  MORIOKA Tomohiko  <tomo@kanji.zinbun.kyoto-u.ac.jp>
+2003-02-05  Yoichi NAKAYAMA  <yoichi@eken.phys.nagoya-u.ac.jp>
+
+	* eword-encode.el (mime-encode-header-in-buffer):
+	Do not eliminate white spaces.
+
+
+2002-12-27 MORIOKA Tomohiko <tomo@kanji.zinbun.kyoto-u.ac.jp>
 
 	* FLIM: Version 1.14.5 (Demachiyanagi) released.
 
